--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,5 @@
 workflows:
-  version: 2
-  build_ios:
-    name: Build iOS
-    script:
-      - flutter build ios
-      - cd ios
-      - flutter build ipa --release
-    artifacts:
-      - build/ios/ipa/Runner.ipa
+    sample-workflow:
+        name: Codemagic Sample Workflow
+        max_build_duration: 120
+        instance_type: mac_mini_m1
